Car Upload pages.

--- a/dashboard-listings.html
+++ b/dashboard-listings.html
@@ -246,7 +246,7 @@
                                         <h4 class="dcm-title mb-0">Listings</h4>
                                     </div>
                                     <div class="dcm-btns flex-md-grow-0 flex-grow-1 flex-sm-nowrap flex-wrap">
-                                        <a href="#" class="btn dcm-btn flex-md-grow-0 flex-grow-1 dcm-btn-green">
+                                        <a href="./add-car-2.html" class="btn dcm-btn flex-md-grow-0 flex-grow-1 dcm-btn-green">
                                             <svg width="16" height="17" viewBox="0 0 16 17" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M8 3.81641V13.1497" stroke="#0C0D45" stroke-width="2"
