--- a/pages.html
+++ b/pages.html
@@ -68,19 +68,21 @@
                 <li><a href="./kyc-verification.html" class="text-parrot">KYC verification</a></li>
                 <li><a href="./account-reporting.html" class="text-parrot">Account Reporting</a></li>
                 <li class="list-unstyled"><a style="font-size: 35px;" class="text-white text-center">------ 28-Nov-2024 ------</a></li>
-                <li><a href="./car-details-sold.html" class="text-info">Vehicle Details Sold</a></li>
-                <li><a href="./car-details-sold-seller.html" class="text-info">Vehicle Details Sold - Seller Information</a></li>
-                <li><a href="./car-details-sold-buyer.html" class="text-info">Vehicle Details Sold - Buyers Information</a></li>
-                <li><a href="./fee-payment.html" class="text-info">Fee Payment</a></li>
-                <li><a href="./smart-wallet-add-fund.html" class="text-info">Smart Wallet Add Fund</a></li>
-                <li><a href="./smart-wallet-balance.html" class="text-info">Smart Wallet Balance</a></li>
-                <li><a href="./smartconnect-seller-information-for-private-vendor.html" class="text-info">Vendor Purchase - Private Seller information</a></li>
-                <li><a href="./smartconnect-seller-information-for-vendor-buys.html" class="text-info">Smart Connect Seller information (When Vendor Buys)</a></li>
-                <li><a href="./smartconnect-buyer-information-for-vendor-sells.html" class="text-info">Smart Connect Buyer  information (When Vendor Sells) </a></li>
-                <li><a href="./smart-drop-get-offers.html" class="text-info">Book Smart Drop </a></li>
-                <li><a href="./smart-drop-received-quotes.html" class="text-info">Book Smart Drop Received Quotes from Dashboard (7+) links.</a></li>
-                <li><a href="./payment-from-chat.html" class="text-info">Payment form chat</a></li>
+                <li><a href="./car-details-sold.html" class="text-parrot">Vehicle Details Sold</a></li>
+                <li><a href="./car-details-sold-seller.html" class="text-parrot">Vehicle Details Sold - Seller Information</a></li>
+                <li><a href="./car-details-sold-buyer.html" class="text-parrot">Vehicle Details Sold - Buyers Information</a></li>
+                <li><a href="./fee-payment.html" class="text-parrot">Fee Payment</a></li>
+                <li><a href="./smart-wallet-add-fund.html" class="text-parrot">Smart Wallet Add Fund</a></li>
+                <li><a href="./smart-wallet-balance.html" class="text-parrot">Smart Wallet Balance</a></li>
+                <li><a href="./smartconnect-seller-information-for-private-vendor.html" class="text-parrot">Vendor Purchase - Private Seller information</a></li>
+                <li><a href="./smartconnect-seller-information-for-vendor-buys.html" class="text-parrot">Smart Connect Seller information (When Vendor Buys)</a></li>
+                <li><a href="./smartconnect-buyer-information-for-vendor-sells.html" class="text-parrot">Smart Connect Buyer  information (When Vendor Sells) </a></li>
+                <li><a href="./smart-drop-get-offers.html" class="text-parrot">Book Smart Drop </a></li>
+                <li><a href="./smart-drop-received-quotes.html" class="text-parrot">Book Smart Drop Received Quotes from Dashboard (7+) links.</a></li>
+                <li><a href="./payment-from-chat.html" class="text-parrot">Payment form chat</a></li>
                 <li><a href="./live-chat.html" class="text-info">Live Chat Page</a></li>
+                <li><a href="./add-car-2.html" class="text-info">Add Car 2</a></li>
+                <li><a href="./add-car-3.html" class="text-info">Add Car 3</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
