--- a/kyc-verification.html
+++ b/kyc-verification.html
@@ -471,7 +471,7 @@
                                                     </div>
                                                     <div class="sfc-form-group">
                                                         <div class="d-flex align-items-center gap-2">
-                                                            <label class="sfc-label kyc-label">Business’s Companies
+                                                            <label class="sfc-label kyc-label">Business's Companies
                                                                 House registration number *</label>
                                                         </div>
                                                         <div class="row sfc-row gap-md-0 gap-2">
