--- a/pages.html
+++ b/pages.html
@@ -83,6 +83,15 @@
                 <li><a href="./live-chat.html" class="text-info">Live Chat Page</a></li>
                 <li><a href="./add-car-2.html" class="text-info">Add Car 2</a></li>
                 <li><a href="./add-car-3.html" class="text-info">Add Car 3</a></li>
+                <li><a href="./add-car-3a-wholesale.html" class="text-info">Add Car 3a (Wholesale Lot)</a></li>
+                <li><a href="./add-car-4.html" class="text-info">Add Car 4</a></li>
+                <li><a href="./add-car-5.html" class="text-info">Add Car 5</a></li>
+                <li><a href="./add-car-6-recap-1.html" class="text-info">Add Car 6 (Recap 1)</a></li>
+                <li><a href="./add-car-7.html" class="text-info">Add Car 7</a></li>
+                <li><a href="./add-car-8.html" class="text-info">Add Car 8</a></li>
+                <li><a href="./add-car-9-recap-2.html" class="text-info">Add Car 9 (Recap 2)</a></li>
+                <li><a href="./add-car-10.html" class="text-info">Add Car 10</a></li>
+                <li><a href="./add-car-11.html" class="text-info">Add Car 11</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
