--- a/sell-my-car-brand.html
+++ b/sell-my-car-brand.html
@@ -143,7 +143,7 @@
                                                 fill="#695DFD" stroke="#695DFD" stroke-width="0.3" />
                                         </svg>
                                         <h4 class="smc-title mb-0">Sell Your Audi Car</h4>
-                                        <p class="mb-0 smc-desc">Sell Your Audi Car for Top Value – Fast and Easy
+                                        <p class="mb-0 smc-desc">Sell Your Audi Car for Top Value - Fast and Easy
                                             Process Guaranteed!</p>
                                     </div>
                                 </div>
@@ -160,7 +160,7 @@
                                                 fill="#695DFD" stroke="#695DFD" stroke-width="0.3" />
                                         </svg>
                                         <h4 class="smc-title mb-0">Get Your Audi Car Valuation</h4>
-                                        <p class="mb-0 smc-desc">Instant Online Valuation for Your Audi Car – Get the
+                                        <p class="mb-0 smc-desc">Instant Online Valuation for Your Audi Car - Get the
                                             Best Price Today.</p>
                                     </div>
                                 </div>
@@ -177,7 +177,7 @@
                                                 fill="#695DFD" stroke="#695DFD" stroke-width="0.3" />
                                         </svg>
                                         <h4 class="smc-title mb-0">Easy Audi Sale</h4>
-                                        <p class="mb-0 smc-desc">Hassle-Free Audi Car Selling – No Hidden Fees, Quick
+                                        <p class="mb-0 smc-desc">Hassle-Free Audi Car Selling - No Hidden Fees, Quick
                                             Payment!</p>
                                     </div>
                                 </div>
@@ -194,7 +194,7 @@
                                                 fill="#695DFD" stroke="#695DFD" stroke-width="0.3" />
                                         </svg>
                                         <h4 class="smc-title mb-0">Trusted Audi Buyers</h4>
-                                        <p class="mb-0 smc-desc">Trusted Audi Car Buyers – Sell Directly and Securely
+                                        <p class="mb-0 smc-desc">Trusted Audi Car Buyers - Sell Directly and Securely
                                             Quickly! </p>
                                     </div>
                                 </div>
@@ -504,7 +504,7 @@
                             </svg>
                             <div class="hwdc-content">
                                 <h4 class="mb-0 fw-medium hwdc-title">Get your Carsmart Valuation!</h4>
-                                <p class="mb-0 hwdc-desc">Enter your car’s registration to receive an instant, precise
+                                <p class="mb-0 hwdc-desc">Enter your car's registration to receive an instant, precise
                                     value based on live market data and current selling prices.</p>
                             </div>
                             <img src="./assets/img/hwdc-1.png" alt="How we do" class="w-100 hwdc-img">
@@ -519,7 +519,7 @@
                             </svg>
                             <div class="hwdc-content">
                                 <h4 class="mb-0 fw-medium hwdc-title">Get your Carsmart Valuation!</h4>
-                                <p class="mb-0 hwdc-desc">Enter your car’s registration to receive an instant, precise
+                                <p class="mb-0 hwdc-desc">Enter your car's registration to receive an instant, precise
                                     value based on live market data and current selling prices.</p>
                             </div>
                             <img src="./assets/img/hwdc-2.png" alt="How we do" class="w-100 hwdc-img">
@@ -534,7 +534,7 @@
                             </svg>
                             <div class="hwdc-content">
                                 <h4 class="mb-0 fw-medium hwdc-title">Get your Carsmart Valuation!</h4>
-                                <p class="mb-0 hwdc-desc">Enter your car’s registration to receive an instant, precise
+                                <p class="mb-0 hwdc-desc">Enter your car's registration to receive an instant, precise
                                     value based on live market data and current selling prices.</p>
                             </div>
                             <img src="./assets/img/hwdc-3.png" alt="How we do" class="w-100 hwdc-img">
@@ -549,7 +549,7 @@
                             </svg>
                             <div class="hwdc-content">
                                 <h4 class="mb-0 fw-medium hwdc-title">Get your Carsmart Valuation!</h4>
-                                <p class="mb-0 hwdc-desc">Enter your car’s registration to receive an instant, precise
+                                <p class="mb-0 hwdc-desc">Enter your car's registration to receive an instant, precise
                                     value based on live market data and current selling prices.</p>
                             </div>
                             <img src="./assets/img/hwdc-4.png" alt="How we do" class="w-100 hwdc-img">
@@ -564,7 +564,7 @@
                             </svg>
                             <div class="hwdc-content">
                                 <h4 class="mb-0 fw-medium hwdc-title">Get your Carsmart Valuation!</h4>
-                                <p class="mb-0 hwdc-desc">Enter your car’s registration to receive an instant, precise
+                                <p class="mb-0 hwdc-desc">Enter your car's registration to receive an instant, precise
                                     value based on live market data and current selling prices.</p>
                             </div>
                             <img src="./assets/img/hwdc-5.png" alt="How we do" class="w-100 hwdc-img">
@@ -579,7 +579,7 @@
                             </svg>
                             <div class="hwdc-content">
                                 <h4 class="mb-0 fw-medium hwdc-title">Get your Carsmart Valuation!</h4>
-                                <p class="mb-0 hwdc-desc">Enter your car’s registration to receive an instant, precise
+                                <p class="mb-0 hwdc-desc">Enter your car's registration to receive an instant, precise
                                     value based on live market data and current selling prices.</p>
                             </div>
                             <img src="./assets/img/hwdc-6.png" alt="How we do" class="w-100 hwdc-img">
