--- a/signup.html
+++ b/signup.html
@@ -680,7 +680,7 @@
                                                 </div>
                                                 <div class="sfc-form-group">
                                                     <div class="d-flex align-items-center gap-2">
-                                                        <label class="sfc-label">What’s your purchase cost
+                                                        <label class="sfc-label">What's your purchase cost
                                                             range?</label>
                                                     </div>
                                                     <div class="row sfc-row gap-md-0 gap-2">
