--- a/add-car-2.html
+++ b/add-car-2.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=15">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=16">
     </head>
 
     <body class="landing-page add-car-landing">
@@ -105,7 +105,7 @@
             </nav>
             <div class="container flex-grow-1 d-flex flex-column justify-content-center">
                 <div class="d-flex smc-hero-content flex-column gap-2 mb-md-0 mb-sm-5 py-5">
-                    <div class="d-flex gap-2">
+                    <div class="d-flex gap-2 align-items-center">
                         <img src="./assets/img/Rays-purple-left.svg" alt="Rays" class="ac2h-rays">
                         <h2 class="mb-0 fw-medium ms-1 text-white hs-title">Smart <span class="purple-underline">Connect</span> </h2>
                     </div>
@@ -562,7 +562,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=15"></script>
+        <script src="./assets/js/custom.js?v=16"></script>
     </body>
 
 </html>
