--- a/email-templates/light-3.html
+++ b/email-templates/light-3.html
@@ -151,7 +151,7 @@
 
             .card-hero {
                 background-color: #E8EAF1;
-                background-image: url(./assets/top-bg.png);
+                background-image: url(https://anash45.github.io/carsmart_v1/email-templates/assets/top-bg.png);
                 background-size: contain;
                 background-repeat: repeat;
                 display: flex;
@@ -324,14 +324,14 @@
 
     <body>
         <main>
-            <a href="#"><img src="./assets/Logo.png" alt="Logo" class="top-logo"></a>
+            <a href="#"><img src="https://anash45.github.io/carsmart_v1/email-templates/assets/Logo.png" alt="Logo" class="top-logo"></a>
             <div class="card text-center card-shadow">
                 <div class="flex-main">
                     <div class="card-hero">
                         <div class="tc-text">
                             <h3 class="tc-title text-dark fw-medium text-left">That your <span class="text-purple">Car</span></h3>
                         </div>
-                        <img src="./assets/Car-1.png" alt="Car" class="tc-car">
+                        <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/Car-1.png" alt="Car" class="tc-car">
                     </div>
                     <div class="flex-col">
                         <div class="flex-col card-details" style="gap: 12px; padding: 0 20px;">
@@ -341,7 +341,7 @@
                             </div>
                             <div class="flex items-center content-center" style="gap: 20px;">
                                 <span>
-                                    <img src="./assets/vw-logo.png" alt="Logo" class="cd-logo">
+                                    <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/vw-logo.png" alt="Logo" class="cd-logo">
                                 </span>
                                 <div class="flex-col text-left" style="gap: 10px;">
                                     <span class="cd-make fw-medium text-primary">Volkswagen Golf S</span>
@@ -358,7 +358,7 @@
                             </div>
                             <div class="flex-col items-center" style="width: fit-content; margin: 0 auto;">
                                 <span class="fw-medium cd-price text-primary text-center"> £ 11,750 </span>
-                                <img src="./assets/parrot-underline.png" alt="Underline" class="price-underline">
+                                <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/parrot-underline.png" alt="Underline" class="price-underline">
                             </div>
                         </div>
                         <div class="text-center flex-col gap-10" style="padding: 20px 70px;">
@@ -369,28 +369,28 @@
                             <div class="flex-col items-center">
                                 <a href="#" class="btn btn-main">
                                     <span>Complete Your Details</span>
-                                    <img src="./assets/Rays-small.png" alt="Rays">
+                                    <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/Rays-small.png" alt="Rays">
                                 </a>
                             </div>
                         </div>
                         <div class="flex-main" style="padding: 30px 0;">
                             <div class="features flex items-center content-center gap-20" style="margin: 0 auto;">
                                 <div class="feature flex-col gap-10 items-center">
-                                    <img src="./assets/feat-1.png" alt="Feature" class="feat-img">
+                                    <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/feat-1.png" alt="Feature" class="feat-img">
                                     <div class="flex-col items-center text-center">
                                         <span class="text-primary fw-medium" style="font-size: 13px;">100% </span>
                                         <span class="text-primary fw-light" style="font-size: 12px;">Free Always</span>
                                     </div>
                                 </div>
                                 <div class="feature flex-col gap-10 items-center">
-                                    <img src="./assets/feat-2.png" alt="Feature" class="feat-img">
+                                    <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/feat-2.png" alt="Feature" class="feat-img">
                                     <div class="flex-col items-center text-center">
                                         <span class="text-primary fw-medium" style="font-size: 13px;">Home </span>
                                         <span class="text-primary fw-light" style="font-size: 12px;">Collection</span>
                                     </div>
                                 </div>
                                 <div class="feature flex-col gap-10 items-center">
-                                    <img src="./assets/feat-3.png" alt="Feature" class="feat-img">
+                                    <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/feat-3.png" alt="Feature" class="feat-img">
                                     <div class="flex-col items-center text-center">
                                         <span class="text-primary fw-medium" style="font-size: 13px;">Fast</span>
                                         <span class="text-primary fw-light" style="font-size: 12px;">Payment</span>
@@ -416,7 +416,7 @@
                                                     libero, a pharetra augue. Nullam quis risus eget urna mollis ornare
                                                     vel eu leo.</span>
                                             </div>
-                                            <img src="./assets/lc-1.png" alt="Love" class="lc-img">
+                                            <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/lc-1.png" alt="Love" class="lc-img">
                                         </div>
                                         <div class="love-card flex-col gap-12 text-left">
                                             <span class="lc-num">
@@ -431,7 +431,7 @@
                                                     libero, a pharetra augue. Nullam quis risus eget urna mollis ornare
                                                     vel eu leo.</span>
                                             </div>
-                                            <img src="./assets/lc-4.png" alt="Love" class="lc-img">
+                                            <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/lc-4.png" alt="Love" class="lc-img">
                                         </div>
                                     </div>
                                     <div class="lc-cont lcc-2">
@@ -448,7 +448,7 @@
                                                     libero, a pharetra augue. Nullam quis risus eget urna mollis ornare
                                                     vel eu leo.</span>
                                             </div>
-                                            <img src="./assets/lc-2.png" alt="Love" class="lc-img">
+                                            <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/lc-2.png" alt="Love" class="lc-img">
                                         </div>
                                         <div class="love-card flex-col gap-12 text-left">
                                             <span class="lc-num">
@@ -463,7 +463,7 @@
                                                     libero, a pharetra augue. Nullam quis risus eget urna mollis ornare
                                                     vel eu leo.</span>
                                             </div>
-                                            <img src="./assets/lc-5.png" alt="Love" class="lc-img">
+                                            <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/lc-5.png" alt="Love" class="lc-img">
                                         </div>
                                     </div>
                                     <div class="lc-cont lcc-3">
@@ -480,7 +480,7 @@
                                                     libero, a pharetra augue. Nullam quis risus eget urna mollis ornare
                                                     vel eu leo.</span>
                                             </div>
-                                            <img src="./assets/lc-3.png" alt="Love" class="lc-img">
+                                            <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/lc-3.png" alt="Love" class="lc-img">
                                         </div>
                                         <div class="love-card flex-col gap-12 text-left">
                                             <span class="lc-num">
@@ -495,7 +495,7 @@
                                                     libero, a pharetra augue. Nullam quis risus eget urna mollis ornare
                                                     vel eu leo.</span>
                                             </div>
-                                            <img src="./assets/lc-6.png" alt="Love" class="lc-img">
+                                            <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/lc-6.png" alt="Love" class="lc-img">
                                         </div>
                                     </div>
                                 </div>
@@ -506,17 +506,17 @@
             </div>
             <div class="card text-center" style="padding: 24px;">
                 <div class="help-box">
-                    <img src="./assets/Help-Avatar.png" alt="Avatar" class="help-avatar" style="height: 56px;">
+                    <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/Help-Avatar.png" alt="Avatar" class="help-avatar" style="height: 56px;">
                     <div class="flex-col" style="gap: 6px; align-items: center;">
                         <h5 class="fw-medium text-dark" style="font-size: 16px;">Need help? Contact our team</h5>
                         <div class="flex items-center content-center" style="gap: 10px;">
                             <a class="flex items-center content-center hb-link" style="gap: 6px;">
-                                <img src="./assets/phone.png" alt="Phone">
+                                <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/phone.png" alt="Phone">
                                 <span>020 8050 4743</span>
                             </a>
                             <div class="hb-line"></div>
                             <a class="flex items-center content-center hb-link" style="gap: 6px;">
-                                <img src="./assets/phone.png" alt="Phone">
+                                <img src="https://anash45.github.io/carsmart_v1/email-templates/assets/phone.png" alt="Phone">
                                 <span>SmartHub@smarthub.trycarsmart.com</span>
                             </a>
                         </div>
